# utcn-image-processing-2025-g1-lab-1-IP_2025_Lab1-11

./: CMakeLists.txt  README.md  main.cpp
.github/classroom/: autograding.json
.github/workflows/: classroom.yml
src/: lab1.cpp  lab1.h
